@@ -268,6 +268,10 @@ hrema105_opinion = {
 	opinion = 75
 	yearly_decay = 3
 }
+hrema131_opinion = {
+	opinion = -100
+	yearly_decay = 3
+}
 lem_sent_reparations_opinion = {
 	opinion = 50
 	yearly_decay = 2
