@@ -1910,9 +1910,12 @@
  HREMD129: "Die Berater des Hofes sind zu uns gekommen und haben uns die Situation mit einem gewissen Mann namens Ibn Rushd erklärt. Ibn Rushd, ein Faylasuf in seinem Glaubensbekenntnis, hat mit seinen Schriften auf dem Gebiet von Aqidah eine ziemliche Szene gemacht. Er hat eine Widerlegung von Imam Al-Ghazalis Tahafut geschrieben und die Schriften des Aristoteles ausführlich erläutert. Sein Ruhm hat sich sogar bis zu den Christen verbreitet, die ihn als "Kommentator" bezeichnen. Wir müssen in der Debatte Stellung beziehen; entweder unterstützen wir Ibn Rushd und seine Philosophie oder wir unterstützen die steigende Flut von Ash'ari-Theologen."
  HREMA129: "Ernennt ihn als Qadi"
  HREMB129: "Verbannt ihn"
- HREMT130: "English-French Rivalry"
- HREMD130: "As we have seized more and more of the kingdom of France's de-jure territory, we have provoked their ire enough that they no longer wish to tolerate our presence on the land they see as rightfully theirs. This is sure to be the beginning of a long and drawn out rivalry between us and them."
- HREMA130: "Have at them!"
+ HREMT130: "Englisch-französische Rivalität"
+ HREMD130: "Da wir immer mehr von Frankreichs Hoheitsgebiet erobert haben, haben wir ihren Ärger so weit provoziert, dass sie unsere Anwesenheit auf dem Land, das ihnen rechtmäßig zusteht, nicht länger tolerieren wollen. Dies ist sicher der Beginn einer langen und ausgeprägten Rivalität zwischen uns und ihnen."
+ HREMA130: "Auf sie!"
+ HREMT131: "Der Streit der drei Brüder"
+ HREMD131: "Nach dem Tod von Jaroslaw dem Weisen im Jahr 1054 regierten seine drei ältesten Söhne einvernehmlich die Kiewer Rus. Gemeinsam sorgten sie für Stabilität und Wohlstand in der Rus, indem sie abtrünnige Fürsten absetzten und die Außengrenzen gegen kumanische Horden verteidigten.\nDiese gemeinsame Übereinkunft ist nun jedoch durch einen heftigen Streit zwischen den Brüdern beendet worden. Wir können nur hoffen, dass sich die Gemüter bald wieder beruhigen und Feindseligkeiten vermieden werden, die sich bis in die kommenden Generationen ausbreiten werden..."
+ HREMA131: "Dies darf nicht das Ende des Großfürstentums bedeuten"
  FBIT1: "Das Ende der Babenberger"
  FBID1: "Seit Jahrhunderten verteidigt das Haus Babenberg die Ostgrenze des Reiches. Der letzte babenbergische Monarch Friedrich II. versuchte, die mongolische Invasion Ungarns zu nutzen, indem er sich mehrere Grenzgebiete schnappte. Er unterschätzte jedoch die Entschlossenheit der Ungarn und wurde bei dem anschließenden Gegenangriff am Ufer der Leitha im Juni 1246 getötet.\nDa er keine männlichen Erben zurückließ, wurden seine Titel zwischen den Forderungen seiner Töchter Margarete und Gertrud angefochten. Erstere orientierte sich an den böhmischen Premysliden, letztere verriet ihre Verwandtschaft zu den Premysliden für den schwäbischen Markgrafen Hermann von Baden. Der österreichische und steirische Adel muss sich entscheiden, ob er den umherziehenden Markgrafen, der derzeit auf der Suche nach Anerkennung das Land durchstreift, oder das mächtigere Königreich im Norden unterstützt."
  FBIA1: "Unterstützt die Premysliden"
@@ -2391,15 +2394,15 @@
  FBIA129: "Möge er lange leben"
  FBIT130: "Adlige denken, [Root.Heir.GetName] sei schwach"
  FBID130: "When the [Root.GetGermanicAssembly] elected [Root.Heir.GetName] as heir to [Root.GetName], there was already some dissatisfaction on the fringes from those who felt a more experienced princeling from outside the [Root.Monarch.Dynasty.GetName] family would be more worthy. These aggrieved factions have been further alienated by [Root.Heir.GetName]'s misbehavior in court, which they see as a sign of weakness. Unless we can convince all the nobility that [Root.Heir.GetSheHe] is the right pick for the throne, we are in for trouble down the road."
- FBIA130: "Chastize [Root.Heir.GetHerHim]"
- FBIB130: "Let [Root.Heir.GetHerHim] be..."
+ FBIA130: "Bestraft [Root.Heir.GetHerHim]"
+ FBIB130: "Lasst [Root.Heir.GetHerHim] in Ruhe..."
  FBIT131: "Ein verärgerter Sohn"
  FBID131: "Having been passed over in favor of a noble from another family, one of our many illegitimate children is outraged that he has not been designated heir to the [Root.GetAdjective] realm by the [Root.GetGermanicAssembly]. He threatens that if we do not recognize him as our lawful successor, he will take up arms and seize the throne for himself, whether the [Root.GetGermanicAssembly] agrees or not! This could greatly damage the stability of the realm if we do not act quickly and decisively."
  FBIA131: "Das bedeutet Krieg!"
  FBIB131: "Zahlt ihn aus"
- FBIT132: "Hunting Pays Off"
+ FBIT132: "Jagen zahlt sich aus"
  FBID132: "Our designated successor [Root.Heir.GetName] has taken a keen interest in joining hunting expeditions in the forested northern regions of our realm, and the skills [Root.Heir.GetSheHe] has learned behind the bow have turned [Root.Heir.GetHerHim] into a promising warrior. Hunting not only hones pure strength, but also teaches patience and strategy, virtues that are well served in a head of state.\nSome day maybe [Root.Heir.GetSheHe] can take [Root.Monarch.GetHerHis] own heir out hunting and teach these same skills."
- FBIA132: "Great"
+ FBIA132: "Schön"
  FBIT133: "The Role of the [Root.GetGermanicAssembly]"
  FBID133: "Different Germanic leaders interacted with their noble councils in different ways. In some cases Kings ruled like near absolute monarchs, actively working against the interests of the nobility, and in other cases Kings ruled as virtual puppets of the [Root.GetGermanicAssembly]'s whims and consulted with it on every important affair. At the very least, it was expected that a legitimate monarch would convene a meeting of the [Root.GetGermanicAssembly] once per year if not more.\nRecently some members of the [Root.GetGermanicAssembly] have proposed that [Root.Monarch.GetTitle] [Root.Monarch.GetName] rely more on conciliar rule to manage the state, arguing that it will ease the burder of leadership. However, agreeing to their proposal will certainly temper any hope of reforming the old Germanic system."
  FBIA133: "Delegate power"
@@ -3092,26 +3095,26 @@
  vn_religious_events.140.d: "We have been generous to the Gods this year and according to the predictions of our oracles Renenutet will bestow a rich harvest on us this saison. Our farmers are already preparing to harvest the vast amounts of the precious crops."
  vn_religious_events.140.a: "Wonderful"
 #Iconoclast
- vn_religious_events.141.t: "Iconodule Coins"
- vn_religious_events.141.d: "In recent times, more and more coins have appeared in our treasuries depicting Christian saints. Admittedly, such blasphemous coins come into our hands through trade and taxes, but our advisors suspect that less pious mint masters secretly still mint these coins. We must prevent these coins from being distributed."
- vn_religious_events.141.a: "Find the responsible mints and close them"
- vn_religious_events.141.b: "Melt these coins"
- vn_religious_events.141.c: "That is the way it is"
- vn_religious_events.142.t: "Dubious Church Policy"
- vn_religious_events.142.d: "Lately a part of our clergy seems to be overburdened with their church duties, which is why some wrong decisions have already been made. Therefore the Patriarch of [Root.Capital.GetCapitalName] asked us for help to renew the autocephalous structures in our state to prevent further failures."
- vn_religious_events.142.a: "Let them alone"
- vn_religious_events.142.b: "Force them to reform"
- vn_religious_events.143.t: "New Iconoclast Art"
- vn_religious_events.143.d: "Because of our religious principle of not depicting saints or even the Lord personally, our painters and sculptors are faced with completely new challenges in creating religious works of art. However, after long debates with our clergy, they have managed to create an unprecedented religious art trend that satisfies both art and religion."
+ vn_religious_events.141.t: "Ikonodule Münzen"
+ vn_religious_events.141.d: "In letzter Zeit tauchen in unseren Schatzkammern immer mehr Münzen auf, auf denen christliche Heilige abgebildet sind. Zugegeben, solche blasphemischen Münzen kommen durch Handel und Steuern in unsere Hände, aber unsere Berater vermuten, dass weniger fromme Münzmeister diese Münzen immer noch heimlich prägen. Wir müssen verhindern, dass diese Münzen verteilt werden."
+ vn_religious_events.141.a: "Findet die zuständigen Münzstätten und schließt sie"
+ vn_religious_events.141.b: "Schmelzt diese Münzen ein"
+ vn_religious_events.141.c: "So ist es nun einmal"
+ vn_religious_events.142.t: "Fragwürdige Kirchenpolitik"
+ vn_religious_events.142.d: "In letzter Zeit scheint ein Teil unseres Klerus mit seinen kirchlichen Pflichten überfordert zu sein, weshalb bereits einige Fehlentscheidungen getroffen worden sind. Deshalb hat uns der Patriarch von [Root.Capital.GetCapitalName] um Hilfe gebeten, die autokephalen Strukturen in unserem Staat zu erneuern, um weiteres Versagen zu verhindern."
+ vn_religious_events.142.a: "Lasst sie in Ruhe"
+ vn_religious_events.142.b: "Erzwingt eine Reform"
+ vn_religious_events.143.t: "Neue ikonoklastische Kunst"
+ vn_religious_events.143.d: "Aufgrund unseres religiösen Prinzips, Heilige oder gar den Herrn nicht persönlich abzubilden, stehen unsere Maler und Bildhauer bei der Schaffung religiöser Kunstwerke vor völlig neuen Herausforderungen. Nach langen Debatten mit unseren Geistlichen ist es ihnen jedoch gelungen, eine beispiellose religiöse Kunstströmung zu schaffen, die sowohl Kunst als auch Religion befriedigt."
  vn_religious_events.143.a: "Brilliant"
- vn_religious_events.144.t: "Religious Principles"
- vn_religious_events.144.d: "Our religion is weak and many in our country secretly cling to their old faith. We need to consider whether we should either try to fight as rigidly as possible against heretics and infidels in order to spread our faith, or whether we should tolerate these renegades in order to focus on other state affairs."
- vn_religious_events.144.a: "Absolute unity"
- vn_religious_events.144.b: "Relative tolerance"
- vn_religious_events.145.t: "Iconodule Soldiers"
- vn_religious_events.145.d: "A questionable trend has emerged among our soldiers. Many of them begin to wear a chain with a pendant showing a saint or Jesus Christ under their armour. This is said to spur them on in their fight against unbelievers, because in this way they are closer to God, although our clergy dislikes this development. How do we react?"
- vn_religious_events.145.a: "Oppose this trend"
- vn_religious_events.145.b: "Accept this trend"
+ vn_religious_events.144.t: "Religiöse Grundsätze"
+ vn_religious_events.144.d: "Unsere Religion ist schwach und viele in unserem Land klammern sich insgeheim an ihren alten Glauben. Wir müssen uns überlegen, ob wir entweder versuchen sollten, so rigoros wie möglich gegen Häretiker und Ungläubige zu kämpfen, um unseren Glauben zu verbreiten, oder ob wir diese Abtrünnigen tolerieren sollten, um uns auf andere staatliche Angelegenheiten zu konzentrieren."
+ vn_religious_events.144.a: "Absolute Einheit"
+ vn_religious_events.144.b: "Relative Toleranz"
+ vn_religious_events.145.t: "Ikonodule Soldaten"
+ vn_religious_events.145.d: "Unter unseren Soldaten hat sich eine fragwürdige Tendenz herausgebildet. Viele von ihnen beginnen, eine Halskette mit einem Anhänger zu tragen, der entweder einen Heiligen oder aber Jesus Christus unter ihrer Rüstung abbildet. Das soll sie in ihrem Kampf gegen Ungläubige anspornen, denn auf diese Weise sind sie näher bei Gott, wenngleich unseren Geistlichen diese Entwicklung missfällt. Wie reagieren wir darauf?"
+ vn_religious_events.145.a: "Lehnt diese Entwicklung ab"
+ vn_religious_events.145.b: "Akzeptiert diese Entwicklung"
 #Jewish
  vn_religious_events.146.t: "Jüdische Veteranen"
  vn_religious_events.146.d: "Eine Gruppe jüdischer Soldaten, die bei verschiedenen muslimischen und christlichen Herrschern Militärdienst leisteten, ist in unserer Hauptstadt eingetroffen. Viele von ihnen sind erfahrene Krieger, die sehr viel anders ausgebildet wurden als unsere Soldaten. Wir sollten sie zu unserem Vorteil einsetzen."
