@@ -8,6 +8,7 @@
 -Added new mission tree for Pisa with 31 missions
 -Added triggered province modifier for the Slavic sanctuary of Rethra
 -Added Mamluk rebel type
+-Added event for the Yaroslavichi Triumvirate
 -More German localization additions
 
 #Fixes
